<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="融资阶段"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:textColor="@color/gray"/>
    <TextView
        android:id="@+id/cfp1"
        android:text="@string/cfp1"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="30dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:textColor="@color/gray"/>
    <TextView
        android:id="@+id/cfp2"
        android:text="@string/cfp2"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="30dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:textColor="@color/gray"/>
    <TextView
        android:id="@+id/cfp3"
        android:text="@string/cfp3"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="30dp" />
</LinearLayout>