<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_beijingtu">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_layout_45"
        android:background="@color/lucency">

        <com.example.chy.challenge.button.WaveView
            android:id="@+id/register_btn_back"
            android:layout_width="@dimen/activity_layout_45"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="@dimen/activity_layout_25"
                android:layout_height="@dimen/activity_layout_25"
                android:layout_centerInParent="true"
                android:background="@mipmap/ic_jiantou" />
        </com.example.chy.challenge.button.WaveView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/forget_title_top"
            android:textColor="@color/white"
            android:textSize="@dimen/activity_text_16" />
    </RelativeLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/activity_layout_40"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lucency">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_marginLeft="@dimen/activity_layout_25"
                android:layout_marginRight="@dimen/activity_layout_25"
                android:layout_width="match_parent"
                android:background="@drawable/border_white"
                android:layout_height="@dimen/activity_layout_45"
                android:orientation="horizontal">
                <RelativeLayout
                    android:layout_width="@dimen/activity_layout_80"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/forget_tv_phonenum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_tv_phone"
                        android:layout_marginLeft="@dimen/activity_layout_10"
                        android:textColor="@color/white" />

                    <ImageView
                        android:layout_toRightOf="@id/forget_tv_phonenum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_layout_5"
                        android:layout_marginTop="@dimen/activity_layout_4"
                        android:background="@mipmap/ic_haomaxiala" />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent">
                    <EditText
                        android:id="@+id/phone_repwd"
                        android:hint="@string/login_et_phone"
                        android:textSize="@dimen/activity_text_14"
                        android:textColorHint="@color/gray"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"/>
                    <com.example.chy.challenge.button.RevealButton
                        android:id="@+id/getcode"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignBaseline="@+id/phone_repwd"
                        android:layout_alignBottom="@+id/phone_repwd"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_gravity="right"
                        android:layout_centerVertical="true"
                        android:background="@null"
                        android:text="@string/register_btn_code"
                        android:textColor="@color/green"/>
                </RelativeLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_marginLeft="@dimen/activity_layout_25"
                android:layout_marginRight="@dimen/activity_layout_25"
                android:layout_width="match_parent"
                android:background="@drawable/border_white"
                android:layout_marginTop="@dimen/activity_layout_15"
                android:layout_height="@dimen/activity_layout_45"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="@dimen/activity_layout_80"
                    android:layout_height="match_parent"
                    android:text="验证码"
                    android:textColor="@color/white"
                    android:paddingLeft="@dimen/activity_layout_10"
                    android:gravity="center_vertical"/>
                <EditText
                    android:id="@+id/code"
                    android:hint="@string/register_et_code"
                    android:textColorHint="@color/gray"
                    android:layout_width="0dp"
                    android:textSize="@dimen/activity_text_14"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:background="@null"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginLeft="@dimen/activity_layout_25"
                android:layout_marginRight="@dimen/activity_layout_25"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/activity_layout_15"
                android:background="@drawable/border_white"
                android:layout_height="@dimen/activity_layout_45"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="@dimen/activity_layout_80"
                    android:layout_height="match_parent"
                    android:text="新密码"
                    android:paddingLeft="@dimen/activity_layout_10"
                    android:textColor="@color/white"
                    android:gravity="center_vertical"/>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent">
                    <EditText
                        android:id="@+id/newpwd"
                        android:password="true"
                        android:hint="@string/register_et_password"
                        android:textSize="@dimen/activity_text_14"
                        android:textColorHint="@color/gray"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"/>
                    <!--<RelativeLayout-->
                        <!--android:id="@+id/visiblep1"-->
                        <!--android:layout_width="50dp"-->
                        <!--android:layout_height="match_parent"-->
                        <!--android:layout_alignParentTop="true"-->
                        <!--android:layout_alignParentRight="true"-->
                        <!--android:layout_alignParentEnd="true">-->
                        <!--<ImageView-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:layout_centerVertical="true"-->
                            <!--android:layout_alignParentRight="true"-->
                            <!--android:layout_alignParentEnd="true" />-->
                    <!--</RelativeLayout>-->



                </RelativeLayout>

            </LinearLayout>



            <LinearLayout
                android:layout_marginLeft="@dimen/activity_layout_25"
                android:layout_marginRight="@dimen/activity_layout_25"
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_layout_45"
                android:background="@drawable/border_white"
                android:layout_marginTop="@dimen/activity_layout_15"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:text="@string/forget_sure_pass"
                    android:textColor="@color/white"
                    android:paddingLeft="@dimen/activity_layout_10"
                    android:gravity="center_vertical"/>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent">
                    <EditText
                        android:id="@+id/newpwd2"
                        android:password="true"
                        android:hint="@string/register_et_newpass"
                        android:textSize="@dimen/activity_text_14"
                        android:textColorHint="@color/gray"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"/>
                    <!--<RelativeLayout-->
                        <!--android:id="@+id/visiblep2"-->
                        <!--android:layout_width="50dp"-->
                        <!--android:layout_height="match_parent"-->
                        <!--android:layout_alignParentTop="true"-->
                        <!--android:layout_alignParentRight="true"-->
                        <!--android:layout_alignParentEnd="true">-->
                        <!--<ImageView-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:layout_centerVertical="true"-->
                            <!--android:layout_alignParentRight="true"-->
                            <!--android:layout_alignParentEnd="true" />-->
                    <!--</RelativeLayout>-->

                </RelativeLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/complete"
        android:layout_marginLeft="@dimen/activity_layout_25"
        android:layout_marginRight="@dimen/activity_layout_25"
        android:layout_marginTop="@dimen/activity_layout_60"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_border"
        android:text="完成"
        android:textSize="@dimen/activity_text_18"
        android:textColor="@color/white"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.example.chy.challenge.button.WaveView
            android:id="@+id/refister_agreement"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/activity_layout_15"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/activity_layout_10"
            android:background="@null"
            android:gravity="right"
            android:layout_marginRight="@dimen/activity_layout_25"
            android:text="用户协议"
            android:textColor="@color/green"
            android:textSize="@dimen/activity_text_14" >
            <ImageView
                android:id="@+id/register_personal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/ic_xuanze_lv"
                />
            <TextView
                android:layout_toRightOf="@id/register_personal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_btn_personal"
                android:layout_marginLeft="@dimen/activity_layout_5"
                android:textColor="@color/white"
                android:textSize="@dimen/activity_text_14"
                />
        </com.example.chy.challenge.button.WaveView>
    </RelativeLayout>
</LinearLayout>