<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_beijing01">
    <ImageView
        android:layout_marginTop="@dimen/activity_layout_50"
        android:layout_marginBottom="@dimen/activity_layout_50"
        android:src="@mipmap/ic_wenzi"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_marginBottom="@dimen/activity_layout_10"
            android:background="@drawable/login_input"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_layout_40"
            android:layout_marginLeft="@dimen/activity_layout_30"
            android:layout_marginRight="@dimen/activity_layout_30">
            <TextView
                android:layout_width="@dimen/activity_layout_50"
                android:layout_height="match_parent"
                android:text="@string/login_tv_phone"
                android:textColor="@color/white"
                android:textSize="@dimen/activity_text_14"
                android:gravity="center">
            </TextView>
            <TextView
                android:textColor="@color/white"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/gray"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"/>
            <EditText
                android:phoneNumber="true"
                android:textCursorDrawable="@drawable/edit_curcor_color"
                android:textColor="@color/white"
                android:maxLines="1"
                android:id="@+id/login_phone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/login_et_phone"
                android:textSize="@dimen/activity_text_14"
                android:textColorHint="@color/white"
                android:background="@null"/>
        </LinearLayout>
        <LinearLayout
            android:background="@drawable/login_input"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">
            <ImageView
                android:scaleType="centerInside"
                android:layout_width="@dimen/activity_layout_50"
                android:layout_height="match_parent"
                />
            <TextView
                android:layout_width="@dimen/activity_layout_1"
                android:layout_height="match_parent"
                android:background="@color/gray"
                android:layout_marginTop="@dimen/activity_layout_10"
                android:layout_marginBottom="@dimen/activity_layout_10"
                android:layouts_marginRight="@dimen/activity_layout_10"/>
            <EditText
                android:textCursorDrawable="@drawable/edit_curcor_color"
                android:textColor="@color/white"
                android:password="true"
                android:maxLines="1"
                android:id="@+id/login_passWord"
                android:layout_width="0dp"
                android:textSize="@dimen/activity_text_14"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/login_et_password"
                android:textColorHint="@color/white"
                android:background="@null"
                android:layout_marginLeft="@dimen/activity_layout_10"/>
        </LinearLayout>

    </LinearLayout>
    <com.example.chy.challenge.button.WaveView
        android:id="@+id/login_forgetPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activity_layout_20">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_bt_fotgetpass"
            android:textColor="@color/green"
            android:textSize="@dimen/activity_text_14"
            />
        </com.example.chy.challenge.button.WaveView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/activity_layout_20">
        <TextView
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="您还没有挑战高薪账号？"/>
        <com.example.chy.challenge.button.WaveView
            android:id="@+id/login_regist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_bt_register"
                android:textSize="@dimen/activity_text_14"
                android:textColor="@color/green"
                />
    </com.example.chy.challenge.button.WaveView>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/activity_layout_120"
            >
    <com.example.chy.challenge.button.RevealButton
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_layout_40"
        android:text="登录"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/activity_layout_20"
        android:textColor="@color/white"
        android:background="@drawable/button_border"
        android:textSize="@dimen/activity_text_16"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>
    </RelativeLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/activity_layout_100"
        android:layout_height="@dimen/activity_layout_20">
        <TextView
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:layout_height="@dimen/activity_layout_1" />
        <TextView
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/activity_text_14"
            android:text="or"/>
        <TextView
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:layout_height="@dimen/activity_layout_1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_three"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_layout_90"
        android:layout_marginTop="@dimen/activity_layout_10"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="@dimen/activity_layout_0"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <com.example.chy.challenge.button.WaveView
                android:scaleType="fitXY"
                android:id="@+id/QQLogin"
                android:layout_width="@dimen/activity_layout_45"
                android:layout_height="@dimen/activity_layout_45"
                android:background="@drawable/testbutton">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/ic_qq"
                    />
            </com.example.chy.challenge.button.WaveView>
            <TextView
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/activity_layout_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/activity_text_12"
                android:text="@string/login_bt_qq"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="@dimen/activity_layout_0"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <com.example.chy.challenge.button.WaveView
                android:scaleType="fitXY"
                android:id="@+id/WechatLogin"
                android:layout_width="@dimen/activity_layout_45"
                android:layout_height="@dimen/activity_layout_45"
                android:background="@drawable/testbutton">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/ic_weixin"
                    />
                </com.example.chy.challenge.button.WaveView>

            <TextView
                android:textColor="@color/white"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_bt_weixin"
                android:textSize="@dimen/activity_text_12"
                android:id="@+id/textView4" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="@dimen/activity_layout_0"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <com.example.chy.challenge.button.WaveView
                android:scaleType="fitXY"
                android:id="@+id/WeboLogin"
                android:layout_width="@dimen/activity_layout_45"
                android:layout_height="@dimen/activity_layout_45"
                android:background="@drawable/testbutton">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/ic_xinlang"
                    />
                </com.example.chy.challenge.button.WaveView>
            <TextView
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/activity_layout_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/activity_text_12"
                android:text="@string/login_bt_xinlang"/>
        </LinearLayout>
    </LinearLayout>
    </RelativeLayout>
</LinearLayout>



